fix(web/css): Prevent weight and durability bar overflow

--- a/web/src/index.scss
+++ b/web/src/index.scss
@@ -22,7 +22,6 @@ $imageSize: $gridSize - 2.5vh;
   font-size: 1.5vh;
   font-weight: 400;
   box-sizing: content-box;
-  // overflow: hidden; FIXES SUBMENU
   user-select: none;
   margin: 0;
   color: #fff;
@@ -135,6 +134,7 @@ img {
     margin-top: auto;
     background: rgba(0, 0, 0, 0.5);
     height: 0.5vh;
+    overflow: hidden;
 
     div {
       height: 100%;
@@ -232,6 +232,7 @@ input[type='number'] {
   background: rgba(0, 0, 0, 0.5);
   height: 1vh;
   border-radius: $borderRadius;
+  overflow: hidden;
 
   div {
     height: 80%;
